--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,15 @@
+/* :root{
+  var(--)
+} */
+
+.layout-container{
+  height: 99.5vh;
+  width: 99.5%;
+  border: 1px solid blue;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
 .App {
   text-align: center;
 }
