--- a/src/components/Main.css
+++ b/src/components/Main.css
@@ -12,14 +12,36 @@
     border: 1px solid yellow;
 }
 
-.main-folders-container{
+.main-folders-files-container{
+    display: flex;
+   flex-direction: column;
+    justify-content:space-between;
+    align-items: center;
+   
+    border: 3px solid chartreuse;
+    width: 60%;
+}
+
+.main-onlyFolders-container{
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    border: 1px solid goldenrod;
+    height: 45%;
+     gap: 1rem;
+     width: 100%;
+     align-items: center;
+    }
+    
+    .main-onlyFiles-container{
     align-items: center;
-    gap: 1rem;;
-    border: 3px solid chartreuse;
-    width: 60%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    border: 1px solid goldenrod;
+    height: 45%;
+     gap: 1rem;
+     width: 100%;
 }
 
 .folder{
@@ -27,8 +49,8 @@
     justify-content: space-around;
     align-items: center;
     max-width: 100%;
-    width: 200px;
-    height: 8%;
+    width: 180px;
+    height: 15%;
     border: 1px solid;
 }
 .folder p{
